--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <!-- Header -->
-        <header class="header bg-gradient-primary text-white text-center py-4 mb-4">
+        <header class="header bg-gradient-primary text-white text-center mb-4">
             <div class="container">
                 <h1 class="display-4 fw-bold mb-2">
                     <i class="bi bi-film me-2"></i>YouTube Video Segments Playlist
