--- a/examples/karaokenator.html
+++ b/examples/karaokenator.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <!-- Header -->
-        <header class="header bg-gradient-primary text-white text-center py-4 mb-4">
+        <header class="header bg-gradient-primary text-white text-center mb-4">
             <div class="container">
                 <h1 class="display-4 fw-bold mb-2">
                     <i class="bi bi-mic me-2"></i>Karaokenator 1.0
@@ -26,7 +26,7 @@
         
         <!-- Main Content -->
         <div class="container">
-            <div class="row g-4">
+            <div class="row">
                 <!-- Player Section -->
                 <div class="col-lg-8">
                     <div class="card shadow-sm h-100">
@@ -86,7 +86,7 @@
                 
                 <!-- Playlist Section -->
                 <div class="col-lg-4">
-                    <div class="card shadow-sm h-100">
+                    <div class="card shadow-sm playlist-card">
                         <div class="card-header bg-light">
                             <h4 class="mb-0">
                                 <i class="bi bi-list-ul me-2"></i>Karaoke Playlist
