--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karaokenator - YouTube Karaoke Playlist</title>
-    <meta http-equiv="refresh" content="0; url=/">
-    <script>
-        // Immediate redirect to Karaokenator
-        window.location.href = '/';
-    </script>
 </head>
 <body>
     <div style="text-align: center; margin-top: 50px; font-family: Arial, sans-serif;">
         <h1>🎤 Karaokenator</h1>
-        <p>Redirecting to the Karaokenator...</p>
-        <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
+        <p>This page is no longer used. The Karaokenator is now the main page!</p>
+        <p><a href="/">Go to the Karaokenator</a></p>
     </div>
 </body>
 </html>
