Transition between segments is now optional.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                                 <button class="btn btn-outline-secondary" id="loop-btn">
                                     <i class="bi bi-arrow-repeat me-1"></i>Loop: <span id="loop-status">OFF</span>
                                 </button>
+                                <button class="btn btn-outline-secondary" id="transitions-btn">
+                                    <i class="bi bi-soundwave me-1"></i>Transitions: <span id="transitions-status">ON</span>
+                                </button>
                             </div>
                             
                             <!-- Status -->
